plugins {
    id 'java'
    id 'groovy'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

def resolveQualifier = {
    def ref = System.getenv('GITHUB_REF_NAME') ?: ''
    if (!ref) {
        return 'LOCAL'
    }
    if (ref == 'master') {
        return ''
    }
    if (ref ==~ /v\d+\.\d+\.\d+$/) {
        return ''
    }
    def tagMatch = (ref =~ /^v\d+\.\d+\.\d+-(.+)$/)
    if (tagMatch) {
        return tagMatch[0][1]
    }
    if (ref == 'beta') {
        return 'beta'
    }
    return 'SNAPSHOT'
}

ext {
    junitVersion = '5.7.1'
    spockVersion = '2.3-groovy-4.0'
    appVersionQualifier = resolveQualifier()
    appVersion = appVersionQualifier ? "${appVersionBase}-${appVersionQualifier}" : appVersionBase
}

version = appVersion

def generatedSrcDir = layout.buildDirectory.dir('generated/sources/appInfo/java/main').get().asFile

tasks.register('generateAppInfo') {
    outputs.dir generatedSrcDir
    doFirst {
        def dir = new File(generatedSrcDir, 'com/palmer/billingstatementgenerator')
        dir.mkdirs()
        new File(dir, 'AppInfo.java').text = """\
  package com.palmer.billingstatementgenerator;
  
  public final class AppInfo {
      public static final String VERSION = \"${appVersion}\";
      private AppInfo() {}
  }
  """
    }
}

compileJava.dependsOn generateAppInfo
sourceSets.main.java.srcDirs(tasks.named('generateAppInfo'))

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.palmer.billingstatementgenerator.Launcher'
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation('io.github.mkpaz:atlantafx-base:2.0.1')
    implementation('org.slf4j:slf4j-api:2.0.9')
    implementation('ch.qos.logback:logback-classic:1.4.14')
    implementation('com.fasterxml.jackson.core:jackson-databind:2.17.3')
    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.3')
    implementation('net.java.dev.jna:jna-platform:5.14.0')
    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
    implementation('org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1')

    testImplementation 'org.apache.groovy:groovy-all:4.0.24'
    testImplementation "org.spockframework:spock-core:${spockVersion}"
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

run {
    if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
        jvmArgs "-Xdock:icon=${projectDir}/packaging/app.icns",
                '-Xdock:name=Statement Manager'
    }
    jvmArgs '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
}

tasks.register('jpackageApp', Exec) {
    dependsOn installDist

    def outputDir = layout.buildDirectory.dir('jpackage').get().asFile
    def libDir = layout.buildDirectory.dir("install/${rootProject.name}/lib").get().asFile
    def os = org.gradle.internal.os.OperatingSystem.current()

    doFirst {
        delete outputDir
        outputDir.mkdirs()
    }

    def iconFile = os.macOsX ? 'packaging/app.icns' : (os.windows ? 'packaging/app.ico' : 'packaging/app.png')

    def args = [
            'jpackage',
            '--type', os.macOsX ? 'dmg' : (os.windows ? 'msi' : 'deb'),
            '--name', 'Eternatel',
            '--app-version', appVersionBase,
            '--vendor', 'Eternatel',
            '--icon', iconFile,
            '--input', libDir.absolutePath,
            '--main-jar', "${rootProject.name}-${project.version}.jar",
            '--main-class', 'com.palmer.billingstatementgenerator.Launcher',
            '--dest', outputDir.absolutePath,
    ]
    if (os.windows) args += ['--win-shortcut', '--win-menu']
    commandLine args

    doLast {
        if (appVersionQualifier) {
            def ext = os.macOsX ? 'dmg' : (os.windows ? 'msi' : 'deb')
            def found = outputDir.listFiles()?.find { it.name.endsWith(".${ext}") }
            if (found) {
                found.renameTo(new File(outputDir, "Eternatel-${appVersion}.${ext}"))
            }
        }
    }
}

javadoc {
    title = 'Eternatel'
    options.encoding = 'UTF-8'
    options.memberLevel = JavadocMemberLevel.PROTECTED
    options.addStringOption('Xdoclint:none', '-quiet')
}
